style/table-headers.css
.headersMenu {
  min-height: 100px;
  height: fit-content;
  width: 200px;
  padding: 3px;
  box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px 1px,
    rgba(15, 15, 15, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
  border-radius: 6px;
  background-color: white;

  display: inline-flex;
  flex-direction: column;
}

.headersMenu .ProseMirror-menuitem,
.columnTypeDropdown .ProseMirror-menu-dropdown-item {
  border: none;
  display: inline-flex;
  align-items: center;
  padding: 0px;
  margin: 1px;
  border-radius: 4px;
  cursor: pointer;
}

.headersMenu .ProseMirror-menuitem:hover,
.columnTypeDropdown .ProseMirror-menu-dropdown-item:hover {
  background-color: #e9e9ec;
}

.headerInputField {
  display: inline-flex;
  align-items: center;
  padding: 7px 9px;
  margin: 1px;
  border-radius: 4px;
  cursor: pointer;
  border: 2px solid rgb(178, 222, 241);
  box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px inset;
}

.ProseMirror-menu-dropdown-menu.columnTypeDropdown {
  position: absolute;
  width: 150px;
  padding: 3px 3px;
  box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px 1px,
    rgba(15, 15, 15, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
  border-radius: 6px;
  background-color: white;

  display: inline-flex;
  flex-direction: column;

  top: -50px;
  left: 180px;
}

.ProseMirror-menu-dropdown-wrap {
  width: 100%;
}

.typeItem,
.ProseMirror-menu-dropdown.columnTypeDropdown {
  display: flex;
  gap: 10px;
  align-items: center;
  width: 100%;
  padding: 9px;
}

.typeIcon {
  width: 15px;
  height: 15px;
}

.textItemIcon {
  content: url(./svgs/types/text_type.svg);
}

.numberItemIcon {
  content: url(./svgs/types/number_type.svg);
}

.dateItemIcon {
  content: url(./svgs/types/date.svg);
}

.checkboxItemIcon {
  content: url(./svgs/types/checkbox_type.svg);
}

.labelsItemIcon {
  content: url(./svgs/types/label.svg);
}

.currencyItemIcon {
  content: url(./svgs/types/currency.svg);
}

.colHeader .typeIcon {
  position: absolute;
  height: 100%;
  top: 0px;
  left: 8px;
}

.colHeader .cellContent {
  padding-left: 15px;
}

.colHeader .cellContent p {
  overflow: hidden;
}

.sort-down-icon {
  content: url(./svgs/down_arrow.svg);
}
.sort-up-icon {
  content: url(./svgs/up_arrow.svg);
}
.insert-right-icon {
  content: url(./svgs/up_arrow.svg);
  transform: rotate(90deg);
}
.insert-left-icon {
  content: url(./svgs/down_arrow.svg);
  transform: rotate(90deg);
}
.filters-colum-icon {
  content: url(./svgs/filter.svg);
}
.delete-colum-icon {
  content: url(./svgs/trash_can_black.svg);
}

.menuIcon {
  width: 15px;
  height: 15px;
}

.menuItem {
  display: flex;
  gap: 10px;
  align-items: center;
  width: 100%;
  padding: 9px;
}

.empty-header {
  overflow: hidden;
}

.empty-header::after {
  content: 'Untitled';
  position: absolute;
  margin-left: 27px;
  color: #939597;
  top: 5px;
}

